force-app/main/default/objects/RecurringChargeOverride__c/RecurringChargeOverride__c.object-meta.xml
<CustomObject>
    <label>Recurring Charge Override</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Charge Overrides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>