force-app/main/default/objects/RecurringChargeOverride__c/fields/baseProductRecurringCharge__c.field-meta.xml
<CustomField>
    <fullName>baseProductRecurringCharge__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Base Product Recurring Charge</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>