force-app/main/default/objects/RecurringChargeOverride__c/fields/Current_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Renewal_Date__c</fullName>
    <formula>DATE(YEAR(TODAY()),MONTH( startDate__c ), DAY( startDate__c ))</formula>
    <label>Current Renewal Date</label>
    <type>Date</type>
</CustomField>