force-app/main/default/objects/RecurringChargeOverride__c/fields/Monthly_Recurring_Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Recurring_Charge_Amount__c</fullName>
    <formula>IF( ISPICKVAL(recurringChargeFrequency__c,&apos;ANNUALLY&apos;), recurringCharge__c /12, 
IF(AND(ISPICKVAL(recurringChargeFrequency__c,&apos;INVOICE&apos;), ISPICKVAL(negotiatedProduct__r.account__r.BBS_InvoiceFrequency__c,&apos;WEEKLY&apos;)), recurringCharge__c * 4, 
recurringCharge__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Converts all recurring charges into the monthly amount</inlineHelpText>
    <label>Monthly Recurring Charge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>