force-app/main/default/objects/RecurringChargeOverride__c/fields/recurringChargeFrequency__c.field-meta.xml
<CustomField>
    <fullName>recurringChargeFrequency__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Recurring Charge Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ANNUALLY</fullName>
            </value>
            <value>
                <fullName>INVOICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>